--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cybermonster">
+
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <application
@@ -10,8 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CyberMonster">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SpActivity" android:exported="true">
+        <activity
+            android:name=".jetpack.NavigationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/Theme.CyberMonster" />
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".SpActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
